--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo</title>
+    <script></script>
 </head>
 <body>
     <h3>Demo app created for practicing git.</h3>
